--- a/JavaStudentManagementSystem/StudentManagementSystem/src/mainForm.form
+++ b/JavaStudentManagementSystem/StudentManagementSystem/src/mainForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="7" y="8" width="860" height="918"/>
+      <xy x="7" y="8" width="869" height="918"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -2326,7 +2326,7 @@
                       </grid>
                     </children>
                   </grid>
-                  <grid id="ad752" binding="pageStudentGrades" layout-manager="GridLayoutManager" row-count="20" column-count="16" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="ad752" binding="pageStudentGrades" layout-manager="GridLayoutManager" row-count="20" column-count="21" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <card name="Card6"/>
@@ -2338,7 +2338,7 @@
                     <children>
                       <component id="ba713" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="13" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="1" row-span="1" col-span="18" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <font size="22" style="1"/>
@@ -2408,7 +2408,7 @@
                       </component>
                       <component id="2aa16" class="javax.swing.JTextField" binding="tfGradeLetter">
                         <constraints>
-                          <grid row="13" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="13" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -2498,7 +2498,7 @@
                       <grid id="7ff49" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="10" left="0" bottom="10" right="0"/>
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="16" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="0" row-span="1" col-span="21" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-13355980"/>
@@ -2508,18 +2508,18 @@
                       </grid>
                       <vspacer id="f4301">
                         <constraints>
-                          <grid row="2" column="8" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                          <grid row="2" column="13" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </vspacer>
                       <vspacer id="1b492">
                         <constraints>
-                          <grid row="16" column="5" row-span="4" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                          <grid row="16" column="10" row-span="4" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </vspacer>
                       <grid id="20b33" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
-                          <grid row="3" column="15" row-span="13" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="20" row-span="13" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-13355980"/>
@@ -2529,24 +2529,15 @@
                       </grid>
                       <component id="e8c22" class="javax.swing.JComboBox" binding="comboBoxGradeStudent">
                         <constraints>
-                          <grid row="3" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-6645094"/>
                         </properties>
                       </component>
-                      <component id="dbf8d" class="javax.swing.JButton" binding="btnGradeChange">
-                        <constraints>
-                          <grid row="15" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <font size="14" style="1"/>
-                          <text value="Edit"/>
-                        </properties>
-                      </component>
                       <component id="db46b" class="javax.swing.JComboBox" binding="comboBoxGradeCourse">
                         <constraints>
-                          <grid row="5" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="5" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-6645094"/>
@@ -2554,7 +2545,7 @@
                       </component>
                       <component id="470b4" class="javax.swing.JLabel" binding="lbStudentCourseStatus">
                         <constraints>
-                          <grid row="14" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="14" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <font size="16" style="1"/>
@@ -2563,7 +2554,7 @@
                       </component>
                       <component id="f2b0" class="javax.swing.JFormattedTextField" binding="tfGradeM1">
                         <constraints>
-                          <grid row="7" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="7" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -2573,7 +2564,7 @@
                       </component>
                       <component id="b286a" class="javax.swing.JFormattedTextField" binding="tfGradeM2">
                         <constraints>
-                          <grid row="9" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="9" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -2583,12 +2574,30 @@
                       </component>
                       <component id="e604d" class="javax.swing.JFormattedTextField" binding="tfGradeFinal">
                         <constraints>
-                          <grid row="11" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="11" column="7" row-span="1" col-span="12" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
                         <properties>
                           <background color="-6645094"/>
+                        </properties>
+                      </component>
+                      <component id="dbf8d" class="javax.swing.JButton" binding="btnGradeChange">
+                        <constraints>
+                          <grid row="15" column="15" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <font size="14" style="1"/>
+                          <text value="Edit"/>
+                        </properties>
+                      </component>
+                      <component id="e25b9" class="javax.swing.JButton" binding="btnUnrollStudent">
+                        <constraints>
+                          <grid row="15" column="7" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <font size="14" style="1"/>
+                          <text value="Unroll"/>
                         </properties>
                       </component>
                     </children>
